--- a/blog/grid.css
+++ b/blog/grid.css
@@ -1,62 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #F4F2EF;
-    font-family: "Kreon", serif;
-    padding-bottom: 40px;
-}
-
-header {
-    position: relative;
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 30px;
-}
-
-#name {
-    font-family: "Permanent Marker", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-optical-sizing: auto;
-    font-size: 58px;
-    margin-left: 95px;
-    margin-top: 15px;
-    display: block;
-    color: #3b342d;
-}
-
-#links {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    margin-top: 27px;
-    font-optical-sizing: auto;
-    font-size: 27px;
-    font-style: normal;
-    background-color: #E8D9CD;
-    padding: 7.5px;
-    border-radius: 60px;
-    font-family: "Delius", cursive;
-    font-weight: 600;
-    font-style: normal;
-}
-
-.link {
-    padding: 10px 40px;
-    cursor: pointer;
-    transition: background-color 0.3s, border-radius 0.3s;
-    border-radius: 60px;
-}
-
-.link:hover {
-    background-color: rgba(244, 242, 239, 0.7);
-    border-radius: 60px;
-}
+/* Blog Grid Styles */
+/* Note: Base styles (*, body, header, #name, #links, .link) are in shared base.css and header.css */
 
 .main-container {
     max-width: 1800px;
